--- a/_basicsettheory/_quarto.yml
+++ b/_basicsettheory/_quarto.yml
@@ -52,6 +52,7 @@ book:
       - href: https://github.com/directknowledge
         icon: github
         aria-label: GitHub
+  favicon: https://directknowledge.com/assets/favicon.ico
   open-graph: true
   page-footer:
     center: 
