--- a/netlify.toml
+++ b/netlify.toml
@@ -6,3 +6,16 @@
   [redirects.headers]
     X-From = "Netlify"
  
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Strict-Transport-Security = "max-age=31536000"
+    X-Frame-Options = "SAMEORIGIN"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
+    X-XSS-Protection = "1; mode=block"
+    Permissions-Policy = "geolocation=(), microphone=()"
+    Content-Security-Policy = '''
+      form-action 'self';
+      frame-src https://www.youtube.com/embed/ 
+    '''
