--- a/_basicsettheory/_quarto.yml
+++ b/_basicsettheory/_quarto.yml
@@ -11,7 +11,6 @@ project:
 
 book:
   title: "Basic Set Theory"
-  #section: "Basic Set Theory"
   chapters:
     - index.qmd
     - propositional-logic.qmd
@@ -89,7 +88,7 @@ format:
       - ../_html/organization.html
       - ../_html/website.html
       - ../_html/mathjax.html
-      #- ../_html/analytics.html
+      - ../_html/analytics.html
       - _html/mathhead.html
   pdf:
     keep-tex: true
