--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,7 +7,6 @@ project:
     - assets
     - images
   post-render: 
-    #- _webtools/html_revise.py
     - _webtools/render-books.py
 
 
@@ -60,5 +59,5 @@ format:
       - _html/organization.html
       - _html/website.html
       - _html/mathjax.html
-      #- _html/analytics.html
+      - _html/analytics.html
 
