--- a/__basicsettheory/_quarto.yml
+++ b/__basicsettheory/_quarto.yml
@@ -27,6 +27,7 @@ book:
   description: "Basic Set Theory"
 
 metadata-files:
+  - ../_variables.yml
   - ../_meta/book-html.yml
   - ../_meta/format.yml
   #- _meta/_book-epub.yml
