--- a/__multivariablecalculus/_quarto.yml
+++ b/__multivariablecalculus/_quarto.yml
@@ -29,6 +29,7 @@ book:
   description: "Multivariable Calculus"  
 
 metadata-files:
+  - ../_variables.yml
   - ../_meta/book-html.yml
   - ../_meta/format.yml
   #- _meta/_book-epub.yml
