--- a/_meta/book-html.yml
+++ b/_meta/book-html.yml
@@ -38,7 +38,7 @@ book:
             aria-label: Multivariable Calculus Book
       - href: http://directknowledge.com/about.html
         text: "About"
-      - href: https://youtube.com/@directknowledge
+      - href: https://www.youtube.com/channel/UCi_E35l9kKfrxoQJRMbgMsg/
         icon: youtube
         aria-label: YouTube
       - href: https://github.com/directknowledge
@@ -50,6 +50,8 @@ book:
     center: 
       - text: "&copy; Copyright 2023, All Rights Reserved. DirectKnowledge.com"
         href: "https://directknowledge.com"
+  repo-url: https://github.com/directknowledge
+  repo-actions: [issue]
 
 bibliography: references.bib
 
