--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,8 +6,8 @@ project:
   type: book
   resources: 
     - assets
-  #post-render: 
-    #- html_revise.py
+  post-render: 
+    - html_revise.py
 
 book:
   title: "Direct Knowledge"
@@ -66,7 +66,7 @@ format:
     toc-title: "Chapter Contents"
     toc-depth: 3
     toc-location: right
-    smooth-scroll: true
+    #smooth-scroll: true
     html-math-method:
       method: mathjax
       url: "https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"	
